2003-01-24  Mark Salter  <msalter@redhat.com>

	* include/hal_verde.h: Add some arbitatration unit defines.
	* src/verde_misc.c (_scrub_ecc): Make scrub an atomic operation on
	the bus. Thanks to rickr@mn.rr.com for pointing out the need for
	this.

2002-11-12  Mark Salter  <msalter@redhat.com>

	* include/hal_var_ints.h (CYGNUM_HAL_INTERRUPT_MSG_IBPQ): IRQ 26
	belongs to messaging unit.

2002-09-19  Mark Salter  <msalter@redhat.com>

	* include/hal_verde.h: Remove stuff provided by XScale core package.
	* src/verde_misc.c: Ditto.
	* cdl/hal_arm_xscale_verde.cdl (CYGBLD_HAL_VAR_H): Define.

2002-08-29  Mark Salter  <msalter@redhat.com>

	* include/plf_stub.h: Add HAL_STUB_HW_BREAKPOINT_LIST_SIZE and
	HAL_STUB_HW_WATCHPOINT_LIST_SIZE.

2002-08-12  Mark Salter  <msalter@redhat.com>

	* cdl/hal_arm_xscale_verde.cdl: Remove CYGSEM_REDBOOT_ARM_LINUX_BOOT
	requirement.

2002-05-28  Mark Salter  <msalter@redhat.com>

	* cdl/hal_arm_xscale_verde.cdl: Fix linux exec address test.

	* include/hal_verde.h (CYGARC_HAL_MMU_OFF): XScale has
	special requirements for turning off MMU.

2002-05-24  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/hal_arm_xscale_verde.cdl: Remove implement of
	CYGINT_HAL_VIRTUAL_VECTOR_COMM_BAUD_SUPPORT since platforms should
	define whether baud rate changes are possible.

2002-04-01  Rory Bolt  <rorybolt@pacbell.net>

	* include/hal_var_ints.h: Fix definition for DMA1_ERR.

2002-02-25  Mark Salter  <msalter@redhat.com>

	* src/verde_misc.c: Timer source clock is always exactly 200MHz.

2002-02-22  Mark Salter  <msalter@redhat.com>

	* src/verde_misc.c: Fix hw watch/break support.

2002-02-20  Mark Salter  <msalter@redhat.com>

	* include/plf_stub.h: Add HW watchpoint/breakpoint support.
	* src/verde_misc.c: Ditto.

2002-02-19  Mark Salter  <msalter@redhat.com>

	* src/verde_misc.c (hal_hardware_init): Initialize debug unit to
	sane state.

2002-01-31  Mark Salter  <msalter@redhat.com>

	* src/verde_pci.c: New file. PCI support common to verde.